# Quintessences

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_MEMORY.md  README.md  ROADMAP.md  skills-lock.json  tmp_commit_msg.txt
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/: .gitignore  DEMONSTRATION.md  GOLDEN_BENCH_CHARTER.md  Makefile  ORGANISATION.md  README.md  SECURITY.md  TRACEABILITY.md  VALIDATION_REPORT.md  pyproject.toml
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/fixtures/contract-interop/: SHA256SUMS.txt  ambiguous-unicode-name.gsiecap  budget-exceeded-ratio.gsiecap  duplicate-json-keys.gsiecap  duplicate-members.gsiecap  expected.json  falsified-key-id-crypto-invalid.gsiecap  inconsistent-key-fingerprint.gsiecap  invalid-negative-size.gsiecap  missing-member.gsiecap  nan-in-manifest.gsiecap  other-private-TEST-ONLY.pem  other-public.pem  path-traversal.gsiecap  tampered-payload.gsiecap  trusted-private-TEST-ONLY.pem  trusted-public.pem  unexpected-directory-entry.gsiecap  unsupported-schema-version.gsiecap  untrusted-key.gsiecap  valid-minimal.gsiecap  windows-separator-name.gsiecap
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/fixtures/golden-bench/: GSIE-GB-DENDRO-ST-001.json  GSIE-GB-DENDRO-ST-002.json  GSIE-GB-DENDRO-ST-003.json
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/fixtures/territoire-reference/: DATA_CARD.md
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/fixtures/territoire-reference/payload/: territory.json
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/schemas/: capsule-manifest.schema.json  capsule-signature.schema.json
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/scripts/: generate_interop_fixtures.py
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/src/gsie_execution_kit/: __init__.py  __main__.py  bench.py  capsule.py  cli.py  json_utils.py
21_EXPERIMENTS/EXP-0001_CAPSULE_TERRITORIALE/EXPERIENCE/tests/: test_bench.py  test_capsule.py  test_cli.py  test_interop_fixtures.py
GSIE/API/: .dockerignore  .env.example  .git-commit-msg.txt  .gitignore  Dockerfile  Dockerfile.db  README.md  SECURITY_AUDIT.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
GSIE/API/alembic/: env.py
GSIE/API/alembic/versions/: 0001_initial_knowledge_botanical_ecosystem.py  0002_metamodel_v6.2_resource_73types.py  0003_migrate_data_v6.1_to_v6.2.py  0004_engine_switch_pg.py  0005_drop_legacy_tables.py  0006_forestry_schema_rfc0016.py  0007_forestry_station_rfc0016.py  0008_forestry_silviculture_rfc0016.py  0009_forestry_provenance_rfc0016.py  0010_forestry_health_rfc0016.py  0011_identification_botanique_rfc0018.py  0012_forestry_source_id_indexes.py
GSIE/API/docker/: entrypoint.sh  generate-jwt-keys.sh
GSIE/API/src/gsie_api/: __init__.py  app.py  outbox_worker.py  worker.py
GSIE/API/src/gsie_api/auth/: __init__.py  refresh_tokens.py  router.py  schemas.py
GSIE/API/src/gsie_api/core/: auth.py  config.py  health.py  limiter.py  logging.py  rbac.py
GSIE/API/src/gsie_api/engines/: pipeline.py
GSIE/API/src/gsie_api/engines/botanical/: engine.py  extraction_bridge.py  gbif_client.py  indigenat_loader.py  router.py  schemas.py  taxref_client.py
GSIE/API/src/gsie_api/governance/: __init__.py  source_registry.py
GSIE/API/src/gsie_api/infrastructure/: database.py  health.py  knowledge_models.py  models.py  object_storage.py  redis_client.py
GSIE/API/src/gsie_api/resources/: __init__.py  router.py  schemas.py  service.py  validators.py
GSIE/API/src/gsie_api/seeds/: __init__.py  autecology_pilot_data.py  botanical_data.py  ecosystem_data.py  run_seeds.py
GSIE/API/src/gsie_api/shared/: middleware.py  schemas.py
GSIE/API/src/gsie_api/websocket/: __init__.py  events.py  manager.py  router.py
GSIE/API/tests/: conftest.py
GSIE/API/tests/fixtures/: arome_temperature_sample.grib2  indigenat_sample.tab  taxref_search_sample.json
GSIE/API/tests/integration/: test_botanical.py  test_correlation.py  test_database.py  test_gis.py  test_knowledge.py  test_pedology.py  test_pipeline.py  test_pipeline_api.py
GSIE/API/tests/unit/: test_app.py  test_autecology_pilot_data.py  test_auth.py  test_botanical_indigenat.py  test_botanical_taxref.py  test_climate.py  test_climate_arome.py  test_config.py  test_coverage.py  test_database.py  test_decision_passport.py  test_engines.py  test_evidence.py  test_extraction_bridge.py  test_forest_dynamics.py  test_forestry_schemas.py  test_health.py  test_knowledge.py  test_knowledge_api.py  test_knowledge_engine.py  test_knowledge_seeds.py  test_logging.py  test_middleware.py  test_models.py  test_object_storage.py  test_pipeline.py  test_rbac.py  test_redis_client.py  test_resources.py  test_seeds.py  test_service.py  test_source_registry.py  test_websocket.py  test_worker.py
GSIE/ENGINES/EVIDENCE_ENGINE/rust/: Cargo.toml  pyproject.toml
GSIE/ENGINES/EVIDENCE_ENGINE/rust/src/: engine.rs  lib.rs  python_bindings.rs  tests.rs  types.rs
(+552 files in other folders)
