[project]
name = "gsie-api"
version = "0.1.0"
description = "GSIE API — General System Intelligence Engine REST/WebSocket API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Camille Perraudeau" }]

# Dépendances épinglées — versions publiées > 7 jours (règle global_rules)
dependencies = [
    # Framework API
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",

    # Validation
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "geojson-pydantic==1.1.2",

    # Base de données
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "geoalchemy2==0.16.0",
    "alembic==1.14.0",

    # Cache & temps réel
    "redis[hiredis]==5.2.1",
    "websockets==14.1",

    # Géospatial — shapely/pyproj dès la semaine 1 (léger)
    # rasterio + geopandas ajoutés en semaine 5 (GIS Engine, nécessite GDAL)
    "shapely==2.0.6",
    "pyproj==3.7.0",

    # Observabilité
    "structlog==24.4.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-instrumentation-sqlalchemy==0.50b0",
    "opentelemetry-instrumentation-redis==0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.29.0",

    # Auth — bcrypt direct (passlib 1.7.4 non maintenu, CVE potentielles)
    "pyjwt[crypto]==2.10.1",
    "bcrypt==4.2.1",

    # Sécurité — rate limiting (OWASP A07)
    "slowapi==0.1.9",

    # OGC API — pygeoapi ajouté en semaine 5 (GIS Engine)
    # Note : pygeoapi 0.19 exige pydantic<2.0, incompatible avec pydantic v2
    # Solution : fastgeoapi (P1) ou wrapper Starlette custom (P0)

    # Utilitaires
    "python-multipart==0.0.20",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "testcontainers[postgres]==4.10.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
    # redis 5.x+ ships its own py.typed stubs; types-redis is obsolete and conflicts
    # "types-redis" must not be added here.
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsie_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_functions = ["should_*", "test_*"]
addopts = "-v --tb=short --cov=gsie_api --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]  # Migrations : lignes longues inévitables
"src/gsie_api/seeds/*_data.py" = ["E501"]  # Données de référence : descriptions longues

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
