[project]
name = "gsie-execution-kit"
version = "0.1.0"
description = "Preuve exécutable GSIE : capsule territoriale signée et Golden Bench"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Camille Perraudeau" }]
dependencies = [
    "cryptography==46.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.14.0",
    "ruff==0.8.4",
]

[project.scripts]
gsie-execution-kit = "gsie_execution_kit.cli:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsie_execution_kit"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
